--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet">
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NLW eSports</title>
+
+        <link rel="stylesheet" href="./styles.css">
+        
     </head>
 
     <body>
+    <!--
         <header>
-            <img src="https://avatars.githubusercontent.com/u/61656959?v=4" alt="Minha foto de perfil do GitHub"/>
+            <div>
+                <img src="https://avatars.githubusercontent.com/u/61656959?v=4" alt="Minha foto de perfil do GitHub"/>
+            </div>
         </header>
-
+    -->
         <main>
             <section>
                 <div>
